# igc-net-rs

./: Cargo.toml  LICENSE  Makefile  README.md
docs/: getting-started.md  metadata-schema.md
igc-net/: Cargo.toml
igc-net-cli/: Cargo.toml
igc-net-cli/src/: main.rs
igc-net/src/: id.rs  indexer.rs  lib.rs  metadata.rs  node.rs  publish.rs  store.rs  topic.rs  util.rs
igc-net/tests/: dedup.rs  eager_fetch.rs  geo_filtered.rs  metadata_only.rs  multi_publisher.rs
igc-net/tests/common/: mod.rs
