[workspace]
members = [
    "igc-net",
    "igc-net-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/igc-net/igc-net-rs"
homepage = "https://igcnet.io"

[workspace.dependencies]
iroh        = "0.97"
iroh-blobs  = "0.99"
iroh-gossip = "0.97"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
blake3      = "1.8.4"
thiserror   = "2"
tokio       = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
hex         = "0.4"
anyhow      = "1"
futures     = "0.3"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono      = { version = "0.4", features = ["serde"] }
clap        = { version = "4", features = ["derive"] }
tempfile    = "3"
rand        = "0.9"
